--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x400" alt="Product 1">
+                    <img src="products/1.png" alt="Product 1">
                     <h3>Product 1</h3>
                     <p>$49.99</p>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x400" alt="Product 2">
+                    <img src="products/2.png" alt="Product 2">
                     <h3>Product 2</h3>
                     <p>$59.99</p>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x400" alt="Product 3">
+                    <img src="products/3.png" alt="Product 3">
                     <h3>Product 3</h3>
                     <p>$39.99</p>
                 </div>
