--- a/portfolio.html
+++ b/portfolio.html
@@ -28,22 +28,22 @@
             <h1>Our Collection</h1>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x400" alt="Summer Collection">
+                    <img src="products/summer.png" alt="Summer Collection">
                     <h3>Summer Collection</h3>
                     <p>Vibrant colors and light fabrics for the perfect summer look.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x400" alt="Winter Collection">
+                    <img src="products/winter.png" alt="Winter Collection">
                     <h3>Winter Collection</h3>
                     <p>Cozy and stylish outfits to keep you warm during cold days.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x400" alt="Casual Wear">
+                    <img src="products/casual.png" alt="Casual Wear">
                     <h3>Casual Wear</h3>
                     <p>Comfortable and trendy everyday outfits for all occasions.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300x400" alt="Formal Wear">
+                    <img src="products/formal.png" alt="Formal Wear">
                     <h3>Formal Wear</h3>
                     <p>Elegant and sophisticated designs for special events.</p>
                 </div>
