--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <p>To create high-quality, fashionable clothing that not only looks good but also feels good - both for the wearer and for the planet.</p>
             <h2>Our Team</h2>
             <div class="team-member">
-                <img src="https://via.placeholder.com/150" alt="Founder">
+                <img src="products/logo.png" alt="Founder">
                 <h3>Jane Doe</h3>
                 <p>Founder & Creative Director</p>
             </div>
